# slipstream

./: .gitignore  LICENSE  README.md  aws-acm-describe-cert.sh  aws-acm-req-cert.sh  aws-acm-status.sh  aws-acm-validation-records.sh  aws-acm-wait.sh  aws-alb-cert.sh  aws-bootstrap-py-task-role.sh  aws-bucket-cors.sh  aws-bucket-ensure.sh  aws-cf-s3-handler.sh  aws-cf-update.sh  aws-decide-and-deploy.sh  aws-ecs-update-py-service.sh  aws-ecs-update-service.sh  aws-gen-buckets.sh  aws-register-py-taskdef.sh  aws-register-taskdef.sh  aws-remote.sh  aws-route-53-records.sh  aws-test-s3-cors.sh  aws-update-cf-policy.sh  aws-update-py-taskdef.sh  aws-update-taskdef.sh  aws-wildcard-acm.sh  bootstrap-task-role.sh  deploy-ws-server-full.sh  dist-config-dev-updated.json  dist-config-dev.json  docker-compose.yml  e2e-tls.sh  t3-chat-clone.code-workspace  validation.json
.cursor/: mcp.json
.cursor/rules/: lightweight-autocomplete.mdc
copilot/: .workspace
python/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  pyrightconfig.json
python/app/: api.py  config.py  inference.py  main.py  models.py  storage.py
turborepo/: .dockerignore  .editorconfig  .gitignore  CLAUDE.md  Dockerfile  README.md  deploy-ws-server.sh  docker-compose.yml  eslint.config.mjs  manage.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  todo.md  turbo.json
turborepo/.changeset/: common-crabs-hammer.md  late-rabbits-hammer.md  plenty-chairs-yell.md  sharp-islands-play.md  tame-suns-rhyme.md  vast-points-do.md
turborepo/.cursor/rules/: lightweight-autocomplete.mdc
(+354 files in other folders)
